@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.playthis"
        name="PlayThis"
-       version="3.0.0~alpha6"
+       version="3.0.0~beta1"
        provider-name="anxdpanic">
     <requires>
         <import addon="xbmc.python" version="2.20.0"/>
@@ -19,7 +19,6 @@
 - add content type support (video audio image executable)
 - add attempt to identify and support quicktime atom  ** thanks @tknorris
 - increased history size limits, applies to ALL content types as use cases my still be limited to one type
-- add parsing for google/reddit redirect links
 - export to M3U exports content specific list
 - delay adding to history until potentially valid source found
 - add labels/rename
@@ -33,9 +32,10 @@
         </assets>
         <summary lang="en">Find and resolve media from a url to play or open.</summary>
         <description lang="en">
-PlayThis will attempt to find and resolve* media from a url to play or open. A history list is available for future use/exporting to M3U**. Supports video, audio and images.
+PlayThis will attempt to find and resolve* media from a url to play or open. A history list is available for future use/exporting to M3U**. Supports video, audio, images and executable***.
 * resolves using URLResolver and youtube-dl
 ** M3U only usable in Kodi w/ PlayThis installed
+*** 'executable' items are urls with potential results available through scraping
 
 Companion browser extension available on the Chrome Web Store and Mozilla's AMO Gallery
 
